@@ -1,4 +1,8 @@
 2005-10-11 Caleb Moore <c.moore@student.unsw.edu.au>
+	
+	* rsvg-cairo-draw.c, rsvg-cairo-render.c, rsvg-cairo-render.h, rsvg-cairo-clip.h: made clip paths and masks able to use objectBoundingBox coordinates
+	
+2005-10-11 Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-text.c: made text not crash rsvg when used with the new switch system. I can't believe I havn't got around to rewriting the text system yet.
 
